--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Mantis React Admin Dashboard</title>
 
     <!-- this is to resolve issue in old safari browser in tablet -->
-    <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
